Update package.json to include @ai-sdk/openai dependency and remove unused RequestContext imports in database-query-workflow.ts

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">=22.13.0"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.73",
     "@mastra/core": "latest",
     "@mastra/libsql": "latest",
     "@mastra/loggers": "latest",
