Update package.json to specify version for @mastra/core, remove yarn.lock, and enhance SQL agent functionality with environment variable support and improved instructions for Vietnamese stock market assistant.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.73",
-    "@mastra/core": "latest",
+    "@mastra/core": "^0.24.5",
     "@mastra/libsql": "latest",
     "@mastra/loggers": "latest",
     "@mastra/memory": "latest",
